Add link for linkedin

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 </ul>
               </div>
               <div class="col-md-6 credit">
-                <p>Developed by <a href="http://www.peterfinlan.com/">Tanvir Sajed</a>, template taken from <a href="http://freebiesbug.com/"><em>Halcyon Days</em></a></p>
+                <p>Developed by <a href="https://ca.linkedin.com/in/tanvir-sajed-a7bb755a">Tanvir Sajed</a>, template idea from <a href="http://freebiesbug.com/"><em>Free Bies Bug</em></a></p>
               </div>
             </div>
           </div>
